Fixed login bug + footer spacing

--- a/parpo-profile/src/App.css
+++ b/parpo-profile/src/App.css
@@ -304,6 +304,11 @@
   color: white;
 }
 
+#login-holder{
+  min-height: 60vh;
+  margin: 2rem auto 0 auto;
+}
+
 #footer{
   position: absolute;
   bottom: 0;
@@ -311,3 +316,16 @@
   background-color: white;
   box-shadow: 0px -4px 8px rgba(0, 0, 0, 0.25);
 }
+
+@media only screen and (max-width: 900px) {
+  #login-holder{
+    min-height: 90vh;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  #login-holder{
+    min-height: 110vh;
+  }
+}
+
